src/app/components/home/home.component.scss
@use "../../../styles/globals" as g;

// banner

.banner {
  background: url("../../../assets/images/home/mobile/image-header.jpg")
    no-repeat;
  background-size: cover;
  background-position-y: -6rem;
}

.banner__content {
  padding: 6.75rem 0 7rem;
}

.banner__heading {
  color: var(--clr-white-900);
  text-align: center;
  font-size: 2.25rem;
  font-weight: 700;
  line-height: 1.1;
  letter-spacing: 0.08038rem;
  text-transform: uppercase;
  white-space: pre-line;
  span {
    display: block;
    font-size: 0.875rem;
    font-weight: 400;
    letter-spacing: 0.625rem;
    opacity: 0.4964;
    margin-bottom: 1rem;
  }
}

.banner__description {
  color: var(--clr-white-900);
  text-align: center;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.66;
  opacity: 0.75;
  margin: 1.5rem 2rem 1.75rem;
}

.banner__anchor {
  @include g.anchor;
  color: var(--clr-white-900);
  background-color: var(--clr-primary);
  &:hover {
    background-color: var(--crl-primary-hover);
  }
}

.bg-white {
  background-color: var(--clr-white-800);
}

// ZX9

.zx9 {
  padding: 3.44rem 0;
  margin: 0 1.5rem;
  border-radius: 0.5rem;
  background: var(--clr-primary)
    url("../../../assets/images/home/desktop/pattern-circles.svg") no-repeat;
  background-size: 20rem;
  background-position: center top;
}

.zx9__image {
  margin: 0 auto;
  max-width: 10.7655rem;
}

.zx9__title {
  margin: 2rem 0 1.5rem;
  text-align: center;
  color: var(--clr-white-900);
  font-size: 2.25rem;
  font-weight: 700;
  line-height: 1.1;
  letter-spacing: 0.08038rem;
  text-transform: uppercase;
  white-space: pre-line;
}

.zx9__description {
  margin: 0 1.5rem 1.5rem;
  color: var(--clr-white-900);
  text-align: center;
  font-size: 0.9375rem;
  font-weight: 400;
  opacity: 0.75;
}

.zx9__anchor {
  @include g.anchor;
  color: var(--clr-white-900);
  background-color: var(--clr-black-900);
  &:hover {
    background-color: var(--clr-grey);
  }
}

// ZX7

.zx7 {
  margin: 1.5rem;
  padding: 6.3125rem 0;
  border-radius: 0.5rem;
  background: url("../../../assets/images/home/mobile/image-speaker-zx7.jpg")
    no-repeat;
  background-size: cover;
}

.zx7__title {
  margin: 0 0 2rem 1.5rem;
  color: var(--clr-black-900);
  font-size: 1.75rem;
  font-weight: 700;
  letter-spacing: 0.125rem;
  text-transform: uppercase;
}

.zx7__anchor {
  @include g.anchor;
  margin: 0 0 0 1.5rem;
  color: var(--clr-black-900);
  background-color: transparent;
  border: var(--border-black);
  &:hover {
    color: var(--clr-white-900);
    background-color: var(--clr-black-900);
  }
}

@media (min-width: 43em) {
  .banner {
    background: url("../../../assets/images/home/tablet/image-header-t.jpg")
      no-repeat;
    background-size: cover;
    background-position-y: -6rem;
  }
  .banner__content {
    padding: 7.88rem 0 10.4375rem;
  }
  .banner__heading {
    font-size: 3.5rem;
    letter-spacing: 0.125rem;
    span {
      margin-bottom: 1.5rem;
    }
  }
  .banner__description {
    margin: 1.5rem 13rem 2.5rem;
  }

  // ZX9

  .zx9 {
    padding: 3.2rem 0 4rem;
    margin: 0 auto;
    width: 43.0625rem;
    background-size: cover;
  }

  .zx9__image {
    max-width: 12.32575rem;
  }

  .zx9__title {
    margin-top: 4rem;
    font-size: 3.5rem;
    letter-spacing: 0.125rem;
  }

  .zx9__description {
    margin: 0 10.65rem 2.5rem;
  }

  // ZX7

  .zx7 {
    margin: 2rem auto;
    width: 43.0625rem;
    background: url("../../../assets/images/home/tablet/image-speaker-zx7-t.jpg")
      no-repeat;
  }

  .zx7__title {
    margin-left: 3.89rem;
  }

  .zx7__anchor {
    margin-left: 3.98rem;
  }
}

@media (min-width: 75em) {
  .banner__container {
    background: var(--clr-black-700)
      url("../../../assets/images/home/desktop/image-hero.jpg") no-repeat;
    background-position: center -6rem;
    background-size: 90rem;
  }
  .banner {
    width: 69.36456rem;
    margin: 0 auto;
    background: none;
  }
  .banner__content {
    padding: 8rem 0 9.88rem;
  }
  .banner__heading {
    text-align: left;
  }
  .banner__description {
    text-align: left;
    margin: 1.5rem 0 2.5rem;
    width: 21.8125rem;
  }
  .banner__anchor {
    margin: 0;
  }
  // ZX9

  .zx9 {
    padding: 0;
    display: flex;
    width: 69.375rem;
    background-size: 50rem;
    background-position: left 1rem;
    overflow: hidden;
  }
  .zx9__image {
    max-width: unset;
    width: 24.8rem;
    margin: 6rem 0 -1rem 7.34rem;
  }
  .zx9__content {
    margin: 8.31rem 5.94rem 7.75rem 8.64rem;
  }
  .zx9__title {
    margin: 0;
    text-align: left;
  }
  .zx9__description {
    margin: 1.5rem 0 2.5rem;
    text-align: left;
  }
  .zx9__anchor {
    margin: 0;
  }

  // ZX7

  .zx7 {
    margin: 3rem auto;
    width: 69.375rem;
    background: url("../../../assets/images/home/desktop/image-speaker-zx7-d.jpg")
      no-repeat;
  }

  .zx7__title {
    margin-left: 5.94rem;
  }

  .zx7__anchor {
    margin-left: 6.03rem;
  }
}

